--- a/framework-res/res/values/public.xml
+++ b/framework-res/res/values/public.xml
@@ -2241,6 +2241,7 @@
     <public type="id" name="websearch" id="0x010203e8" />
     <public type="id" name="find_prev" id="0x010203e9" />
     <public type="id" name="find_next" id="0x010203ea" />
+    <public type="id" name="fontChange" id="0x010203eb" />
     <public type="style" name="Animation" id="0x01030000" />
     <public type="style" name="Animation.Activity" id="0x01030001" />
     <public type="style" name="Animation.Dialog" id="0x01030002" />
